fix: delete dialog extra padding top

--- a/client/modules/Sidebar/Setting.less
+++ b/client/modules/Sidebar/Setting.less
@@ -130,6 +130,7 @@
 }
 
 .scrollContainer {
+    margin-top: 20px;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     max-height: 52vh;
